--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ h1{margin:0 0 8px;text-align:center;font-size:clamp(22px,4vw,32px)}
 .price-table th,.price-table td{padding:12px 14px;border-bottom:1px solid var(--border);text-align:center}
 .price-table thead th{background:#f3f4f6;font-weight:600}
 .price-table tbody tr:last-child td{border-bottom:none}
-.err{margin-top:12px;color:#b91c1c;text-align:center;direction:ltr}
+.err{margin-top:12px;color:#b91c1c;text-align:center;direction:ltr;white-space:pre-wrap}
 </style>
 </head>
 <body>
@@ -36,9 +36,9 @@ h1{margin:0 0 8px;text-align:center;font-size:clamp(22px,4vw,32px)}
 </main>
 <script>
 const API_URL = "https://www.goldapi.io/api/XAU/KWD";
-const API_KEY = "goldapi-5z18ld4gkwkcydf4-io"; // مفتاحك
+const API_KEY = "goldapi-5z18ld4gkwkcydf4-io"; // your key
 const OUNCE_TO_GRAM = 31.1034768;
-const BASE_MS = 10_000;      // 10 ثوانٍ
+const BASE_MS = 10_000; // 10s
 let nextMs = BASE_MS;
 
 const $$ = id => document.getElementById(id);
@@ -47,19 +47,16 @@ function stamp(){
   const d=new Date(), hh=String(d.getHours()).padStart(2,"0"), mm=String(d.getMinutes()).padStart(2,"0"), ss=String(d.getSeconds()).padStart(2,"0");
   $$("lastUpdate").textContent = `آخر تحديث: ${hh}:${mm}:${ss}`;
 }
-
 async function fetchGold(){
   const res = await fetch(API_URL, {
     headers: { "x-access-token": API_KEY, "Accept": "application/json" },
     cache: "no-store",
     mode: "cors"
   });
-  const text = await res.text(); // نقرأ النص أولًا لعرضه عند الخطأ
-  let data;
-  try { data = JSON.parse(text); } catch { data = { raw: text }; }
+  const text = await res.text();
+  let data; try { data = JSON.parse(text); } catch { data = { raw: text }; }
   return { ok: res.ok, status: res.status, data };
 }
-
 async function tick(){
   try{
     const {ok, status, data} = await fetchGold();
@@ -73,15 +70,17 @@ async function tick(){
     $$("g18").textContent   = fmt(g24 * (18/24));
     $$("err").textContent = "";
     stamp();
-    nextMs = BASE_MS; // رجوع للوتيرة الطبيعية
+    nextMs = BASE_MS;
   }catch(e){
-    $$("err").textContent = "Error: " + e.message; // ستراها على الصفحة
-    nextMs = Math.min(nextMs * 2, 60_000);         // backoff حتى لا تتخطى الحدود
+    $$("err").textContent = "Error: " + e.message; // shows cause if it fails
+    nextMs = Math.min(nextMs * 2, 60_000);
   }finally{
     setTimeout(tick, nextMs);
   }
 }
 stamp(); tick();
 </script>
+</body>
+</html>
 </body>
 </html>
