--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     </table>
 
     <p id="err" class="err"></p>
-    <p class="footer">يتم حساب الأسعار من تحويل XAU→KWD عبر api.exchangerate.host ثم اشتقاق الغرام: 24k=1، 22k=22/24، 21k=21/24، 18k=18/24. يتم عرض سبب الخطأ هنا إن حدث.</p>
+    <p class="footer">المصدر البرمجي: <code>exchangerate.host (XAU→KWD)</code> • لا يتم استخدام TradingView في الحسابات</p>
   </main>
 
   <script>
-    const URL = "https://api.exchangerate.host/convert?from=XAU&to=KWD&amount=1";
-    const OUNCE_TO_GRAM = 31.1034768;       // أونصة ترويسية إلى غرام
+    const BASE = "https://api.exchangerate.host/convert?from=XAU&to=KWD&amount=1";
+    const OUNCE_TO_GRAM = 31.1034768;  // أونصة ترويسية
     const BASE_MS = 10_000; let nextMs = BASE_MS;
 
     const $$  = (id) => document.getElementById(id);
@@ -51,8 +51,10 @@
       $$("lastUpdate").textContent = `${hh}:${mm}:${ss}`;
     }
 
-    async function getXauKwd(){
-      const r = await fetch(URL, { cache: "no-store", mode: "cors" });
+    async function fetchXauKwd(){
+      // نكسر الكاش بإضافة طابع زمني
+      const url = `${BASE}&_=${Date.now()}`;
+      const r = await fetch(url, { cache:"no-store", mode:"cors" });
       const text = await r.text();
       let data; try { data = JSON.parse(text); } catch { data = { raw:text }; }
       return { ok: r.ok, status: r.status, data };
@@ -60,7 +62,7 @@
 
     async function tick(){
       try{
-        const res = await getXauKwd();
+        const res = await fetchXauKwd();
         if(!res.ok) throw new Error(`HTTP ${res.status} :: ${JSON.stringify(res.data).slice(0,160)}`);
         const ounceKWD = Number(res.data?.result);
         if(!isFinite(ounceKWD)) throw new Error("invalid number from API");
