--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <main class="container">
-    <h1>أسعار الذهب بالدينار الكويتي</h1>
+    <h1>البيارق الذهبيةي</h1>
     <p class="meta">تحديث كل <strong>10</strong> ثوانٍ • آخر تحديث: <span id="lastUpdate">—</span></p>
 
     <table class="price-table">
