--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <main class="container">
-    <h1>البيارق الذهبيةي</h1>
+    <h1>أسعار الذهب بالدينار الكويتي</h1>
     <p class="meta">تحديث كل <strong>10</strong> ثوانٍ • آخر تحديث: <span id="lastUpdate">—</span></p>
 
     <table class="price-table">
@@ -35,26 +35,30 @@
     </table>
 
     <p id="err" class="err"></p>
-    <p class="footer">المصدر البرمجي: <code>exchangerate.host (XAU→KWD)</code> • لا يتم استخدام TradingView في الحسابات</p>
+    <p class="footer">المصدر: GoldAPI (XAU/KWD). لا نعرض سطر الأونصة — فقط عيارات 24/22/21/18.</p>
   </main>
 
   <script>
-    const BASE = "https://api.exchangerate.host/convert?from=XAU&to=KWD&amount=1";
-    const OUNCE_TO_GRAM = 31.1034768;  // أونصة ترويسية
+    // — إعدادات —
+    const API_URL = "https://www.goldapi.io/api/XAU/KWD";
+    const API_KEY = "goldapi-5z18ld4gkwkcydf4-io";   // مفتاحك
+    const OUNCE_TO_GRAM = 31.1034768;                // تحويل أونصة ترويسية → غرام
     const BASE_MS = 10_000; let nextMs = BASE_MS;
 
-    const $$  = (id) => document.getElementById(id);
-    const fmt = (n) => (typeof n==="number" && isFinite(n)) ? n.toFixed(3) : "—";
+    // — أدوات —
+    const $$  = id => document.getElementById(id);
+    const fmt = n => (typeof n==="number" && isFinite(n)) ? n.toFixed(3) : "—";
     function stamp(){
       const d=new Date(), hh=String(d.getHours()).padStart(2,"0"),
             mm=String(d.getMinutes()).padStart(2,"0"), ss=String(d.getSeconds()).padStart(2,"0");
       $$("lastUpdate").textContent = `${hh}:${mm}:${ss}`;
     }
 
-    async function fetchXauKwd(){
-      // نكسر الكاش بإضافة طابع زمني
-      const url = `${BASE}&_=${Date.now()}`;
-      const r = await fetch(url, { cache:"no-store", mode:"cors" });
+    async function fetchGold(){
+      const r = await fetch(API_URL, {
+        headers: { "x-access-token": API_KEY, "Accept": "application/json" },
+        cache: "no-store", mode: "cors"
+      });
       const text = await r.text();
       let data; try { data = JSON.parse(text); } catch { data = { raw:text }; }
       return { ok: r.ok, status: r.status, data };
@@ -62,11 +66,13 @@
 
     async function tick(){
       try{
-        const res = await fetchXauKwd();
+        const res = await fetchGold();
         if(!res.ok) throw new Error(`HTTP ${res.status} :: ${JSON.stringify(res.data).slice(0,160)}`);
-        const ounceKWD = Number(res.data?.result);
-        if(!isFinite(ounceKWD)) throw new Error("invalid number from API");
 
+        const ounceKWD = Number(res.data?.price);        // سعر الأونصة بالدينار (من GoldAPI)
+        if(!isFinite(ounceKWD)) throw new Error("invalid number");
+
+        // اشتقاق الغرامات فقط (بدون عرض سطر الأونصة)
         const g24 = ounceKWD / OUNCE_TO_GRAM;
         const g22 = g24 * (22/24);
         const g21 = g24 * (21/24);
@@ -81,6 +87,7 @@
         stamp(); nextMs = BASE_MS;
       }catch(e){
         $$("err").textContent = "Error: " + (e?.message || e);
+        // لو ضغطت على حدود الاشتراك 429، زِد الفاصل التالي تلقائيًا
         nextMs = Math.min(nextMs * 2, 60_000);
       }finally{
         setTimeout(tick, nextMs);
