--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>أسعار الذهب بالدينار الكويتي — عيارات 24/22/21/18</title>
+  <title>أسعار الذهب بالدينار الكويتي — 24/22/21/18</title>
   <style>
   :root{--bg:#f7f7f7;--card:#fff;--text:#111;--muted:#6b7280;--border:#e5e7eb}
   *{box-sizing:border-box}
@@ -16,7 +16,6 @@
   .price-table thead th{background:#f3f4f6;font-weight:600}
   .price-table tbody tr:last-child td{border-bottom:none}
   .err{margin-top:12px;color:#b91c1c;text-align:center;direction:ltr;white-space:pre-wrap}
-  .footer{margin-top:14px;color:var(--muted);text-align:center;font-size:12px}
   </style>
 </head>
 <body>
@@ -35,30 +34,30 @@
     </table>
 
     <p id="err" class="err"></p>
-    <p class="footer">المصدر: GoldAPI (XAU/KWD). لا نعرض سطر الأونصة — فقط عيارات 24/22/21/18.</p>
   </main>
 
   <script>
-    // — إعدادات —
-    const API_URL = "https://www.goldapi.io/api/XAU/KWD";
-    const API_KEY = "goldapi-5z18ld4gkwkcydf4-io";   // مفتاحك
-    const OUNCE_TO_GRAM = 31.1034768;                // تحويل أونصة ترويسية → غرام
-    const BASE_MS = 10_000; let nextMs = BASE_MS;
+    // مفتاحك:
+    const ACCESS_KEY = "68bdef1acfd6647d906618dea32dc23e";
 
-    // — أدوات —
-    const $$  = id => document.getElementById(id);
-    const fmt = n => (typeof n==="number" && isFinite(n)) ? n.toFixed(3) : "—";
+    // نطلب سعر 1 XAU بالدينار (KWD) ثم نحول إلى غرامات
+    const BASE = "https://api.exchangerate.host/convert";
+    const OUNCE_TO_GRAM = 31.1034768;   // أونصة ترويسية → غرام
+    const BASE_MS = 10_000;             // 10 ثوانٍ
+    let nextMs = BASE_MS;
+
+    const $$  = (id) => document.getElementById(id);
+    const fmt = (n) => (Number.isFinite(n) ? n.toFixed(3) : "—");
+
     function stamp(){
       const d=new Date(), hh=String(d.getHours()).padStart(2,"0"),
             mm=String(d.getMinutes()).padStart(2,"0"), ss=String(d.getSeconds()).padStart(2,"0");
       $$("lastUpdate").textContent = `${hh}:${mm}:${ss}`;
     }
 
-    async function fetchGold(){
-      const r = await fetch(API_URL, {
-        headers: { "x-access-token": API_KEY, "Accept": "application/json" },
-        cache: "no-store", mode: "cors"
-      });
+    async function fetchXauToKwd(){
+      const url = `${BASE}?access_key=${ACCESS_KEY}&from=XAU&to=KWD&amount=1&_=${Date.now()}`;
+      const r = await fetch(url, { cache:"no-store", mode:"cors" });
       const text = await r.text();
       let data; try { data = JSON.parse(text); } catch { data = { raw:text }; }
       return { ok: r.ok, status: r.status, data };
@@ -66,33 +65,29 @@
 
     async function tick(){
       try{
-        const res = await fetchGold();
-        if(!res.ok) throw new Error(`HTTP ${res.status} :: ${JSON.stringify(res.data).slice(0,160)}`);
+        const res = await fetchXauToKwd();
+        if(!res.ok) throw new Error(`HTTP ${res.status} :: ${JSON.stringify(res.data).slice(0,180)}`);
 
-        const ounceKWD = Number(res.data?.price);        // سعر الأونصة بالدينار (من GoldAPI)
-        if(!isFinite(ounceKWD)) throw new Error("invalid number");
+        // المتوقع: { result: <سعر أونصة XAU بالدينار> }
+        const ounceKWD = Number(res.data?.result);
+        if(!Number.isFinite(ounceKWD)) throw new Error("invalid result from API");
 
-        // اشتقاق الغرامات فقط (بدون عرض سطر الأونصة)
         const g24 = ounceKWD / OUNCE_TO_GRAM;
-        const g22 = g24 * (22/24);
-        const g21 = g24 * (21/24);
-        const g18 = g24 * (18/24);
-
         $$("k24").textContent = fmt(g24);
-        $$("k22").textContent = fmt(g22);
-        $$("k21").textContent = fmt(g21);
-        $$("k18").textContent = fmt(g18);
+        $$("k22").textContent = fmt(g24 * (22/24));
+        $$("k21").textContent = fmt(g24 * (21/24));
+        $$("k18").textContent = fmt(g24 * (18/24));
 
         $$("err").textContent = "";
         stamp(); nextMs = BASE_MS;
       }catch(e){
         $$("err").textContent = "Error: " + (e?.message || e);
-        // لو ضغطت على حدود الاشتراك 429، زِد الفاصل التالي تلقائيًا
-        nextMs = Math.min(nextMs * 2, 60_000);
+        nextMs = Math.min(nextMs * 2, 60_000); // backoff لو صار Rate Limit أو خطأ مؤقت
       }finally{
         setTimeout(tick, nextMs);
       }
     }
+
     stamp(); tick();
   </script>
 </body>
