--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <p id="err" class="err"></p>
   </main>
 
-  <!-- ويدجت صغير مثبت في زاوية الصفحة -->
+  <!-- ويدجت صغير ثابت لعرض XAUUSD (عرض فقط) -->
   <div style="position:fixed; top:10px; right:10px; z-index:999;">
     <div class="tradingview-widget-container">
       <div class="tradingview-widget-container__widget"></div>
@@ -57,8 +57,10 @@
   </div>
 
   <script>
-    // إعدادات API
-    const ACCESS_KEY = "68bdef1acfd6647d906618dea32dc23e"; // مفتاحك
+    // مفتاحك لـ exchangerate.host
+    const ACCESS_KEY = "68bdef1acfd6647d906618dea32dc23e";
+
+    // نطلب سعر 1 XAU بالدينار (KWD) ثم نحسب الغرامات — لا نعرض سطر الأونصة
     const BASE = "https://api.exchangerate.host/convert";
     const OUNCE_TO_GRAM = 31.1034768;
     const BASE_MS = 10_000; let nextMs = BASE_MS;
@@ -73,35 +75,46 @@
     }
 
     async function fetchXauToKwd(){
+      // كسر الكاش بإضافة طابع زمني
       const url = `${BASE}?access_key=${ACCESS_KEY}&from=XAU&to=KWD&amount=1&_=${Date.now()}`;
-      const r = await fetch(url, { cache:"no-store", mode:"cors" });
+      const r = await fetch(url, { cache:"no-store", mode:"cors", referrerPolicy:"no-referrer" });
       const text = await r.text();
       let data; try { data = JSON.parse(text); } catch { data = { raw:text }; }
       return { ok: r.ok, status: r.status, data };
     }
 
+    function fill(ounceKWD){
+      const g24 = ounceKWD / OUNCE_TO_GRAM;
+      $$("k24").textContent = fmt(g24);
+      $$("k22").textContent = fmt(g24*(22/24));
+      $$("k21").textContent = fmt(g24*(21/24));
+      $$("k18").textContent = fmt(g24*(18/24));
+    }
+
     async function tick(){
       try{
         const res = await fetchXauToKwd();
-        if(!res.ok) throw new Error(`HTTP ${res.status} :: ${JSON.stringify(res.data).slice(0,180)}`);
-        const ounceKWD = Number(res.data?.result);
-        if(!Number.isFinite(ounceKWD)) throw new Error("invalid result");
 
-        const g24 = ounceKWD / OUNCE_TO_GRAM;
-        $$("k24").textContent = fmt(g24);
-        $$("k22").textContent = fmt(g24*(22/24));
-        $$("k21").textContent = fmt(g24*(21/24));
-        $$("k18").textContent = fmt(g24*(18/24));
+        // فحص بنية الاستجابة المتوقعة
+        const ounceKWD = Number(
+          (res.data && typeof res.data.result !== "undefined") ? res.data.result : NaN
+        );
+        if(!res.ok || !Number.isFinite(ounceKWD)){
+          // اعرض نصّ الخطأ/الردّ للمساعدة
+          throw new Error(`HTTP ${res.status} :: ${typeof res.data==="string"?res.data:JSON.stringify(res.data).slice(0,280)}`);
+        }
 
+        fill(ounceKWD);
         $$("err").textContent = "";
         stamp(); nextMs = BASE_MS;
       }catch(e){
         $$("err").textContent = "Error: " + (e?.message || e);
-        nextMs = Math.min(nextMs * 2, 60_000);
+        nextMs = Math.min(nextMs * 2, 60_000); // backoff
       }finally{
         setTimeout(tick, nextMs);
       }
     }
+
     stamp(); tick();
   </script>
 </body>
