--- a/index.html
+++ b/index.html
@@ -36,15 +36,32 @@
     <p id="err" class="err"></p>
   </main>
 
-  <script>
-    // مفتاحك:
-    const ACCESS_KEY = "68bdef1acfd6647d906618dea32dc23e";
+  <!-- ويدجت صغير مثبت أسفل يمين الصفحة (عرض فقط) -->
+  <div style="position:fixed; bottom:10px; right:10px; z-index:999;">
+    <div class="tradingview-widget-container">
+      <div class="tradingview-widget-container__widget"></div>
+      <script async type="text/javascript"
+        src="https://s3.tradingview.com/external-embedding/embed-widget-mini-symbol-overview.js">
+      {
+        "symbol": "OANDA:XAUUSD",
+        "locale": "ar",
+        "dateRange": "1D",
+        "colorTheme": "light",
+        "isTransparent": false,
+        "autosize": true,
+        "width": 250,
+        "height": 150
+      }
+      </script>
+    </div>
+  </div>
 
-    // نطلب سعر 1 XAU بالدينار (KWD) ثم نحول إلى غرامات
-    const BASE = "https://api.exchangerate.host/convert";
-    const OUNCE_TO_GRAM = 31.1034768;   // أونصة ترويسية → غرام
-    const BASE_MS = 10_000;             // 10 ثوانٍ
-    let nextMs = BASE_MS;
+  <script>
+    // GoldAPI: نقرأ XAU/KWD (سعر الأونصة بالدينار) ثم نحسب الغرامات — لا نعرض سطر الأونصة
+    const API_URL = "https://www.goldapi.io/api/XAU/KWD";
+    const API_KEY = "goldapi-5z18ld4gkwkcydf4-io"; // مفتاحك
+    const OUNCE_TO_GRAM = 31.1034768;
+    const BASE_MS = 10_000; let nextMs = BASE_MS;
 
     const $$  = (id) => document.getElementById(id);
     const fmt = (n) => (Number.isFinite(n) ? n.toFixed(3) : "—");
@@ -55,34 +72,41 @@
       $$("lastUpdate").textContent = `${hh}:${mm}:${ss}`;
     }
 
-    async function fetchXauToKwd(){
-      const url = `${BASE}?access_key=${ACCESS_KEY}&from=XAU&to=KWD&amount=1&_=${Date.now()}`;
-      const r = await fetch(url, { cache:"no-store", mode:"cors" });
+    async function fetchGold(){
+      // طلب مباشر مع ترويسة المفتاح
+      const r = await fetch(API_URL + "?_=" + Date.now(), {
+        headers: { "x-access-token": API_KEY, "Accept": "application/json" },
+        cache: "no-store",
+        mode: "cors",
+        referrerPolicy: "no-referrer"
+      });
       const text = await r.text();
       let data; try { data = JSON.parse(text); } catch { data = { raw:text }; }
       return { ok: r.ok, status: r.status, data };
     }
 
+    function fill(ounceKWD){
+      const g24 = ounceKWD / OUNCE_TO_GRAM;
+      $$("k24").textContent = fmt(g24);
+      $$("k22").textContent = fmt(g24*(22/24));
+      $$("k21").textContent = fmt(g24*(21/24));
+      $$("k18").textContent = fmt(g24*(18/24));
+    }
+
     async function tick(){
       try{
-        const res = await fetchXauToKwd();
-        if(!res.ok) throw new Error(`HTTP ${res.status} :: ${JSON.stringify(res.data).slice(0,180)}`);
-
-        // المتوقع: { result: <سعر أونصة XAU بالدينار> }
-        const ounceKWD = Number(res.data?.result);
-        if(!Number.isFinite(ounceKWD)) throw new Error("invalid result from API");
-
-        const g24 = ounceKWD / OUNCE_TO_GRAM;
-        $$("k24").textContent = fmt(g24);
-        $$("k22").textContent = fmt(g24 * (22/24));
-        $$("k21").textContent = fmt(g24 * (21/24));
-        $$("k18").textContent = fmt(g24 * (18/24));
-
+        const res = await fetchGold();
+        const ounceKWD = Number(res.data?.price);  // أونصة بالدينار
+        if(!res.ok || !Number.isFinite(ounceKWD)){
+          throw new Error(`HTTP ${res.status} :: ${JSON.stringify(res.data).slice(0,280)}`);
+        }
+        fill(ounceKWD);
         $$("err").textContent = "";
         stamp(); nextMs = BASE_MS;
       }catch(e){
         $$("err").textContent = "Error: " + (e?.message || e);
-        nextMs = Math.min(nextMs * 2, 60_000); // backoff لو صار Rate Limit أو خطأ مؤقت
+        // لو واجهت 429 (حدود)، نبطّئ لمدة أقصاها 60 ثانية
+        nextMs = Math.min(nextMs * 2, 60_000);
       }finally{
         setTimeout(tick, nextMs);
       }
