--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>أسعار الذهب بالدينار الكويتي — 24/22/21/18</title>
   <style>
   :root{--bg:#f7f7f7;--card:#fff;--text:#111;--muted:#6b7280;--border:#e5e7eb}
   *{box-sizing:border-box}
   html,body{margin:0;padding:0;background:var(--bg);color:var(--text);font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Arial,sans-serif}
-  .container{max-width:820px;margin:24px auto;padding:16px}
+  .container{max-width:980px;margin:24px auto;padding:16px}
   h1{margin:0 0 6px;text-align:center;font-size:clamp(22px,4vw,32px)}
   .meta{text-align:center;color:var(--muted);margin:0 0 16px}
+  .layout{display:grid;grid-template-columns:1fr;gap:14px}
+  @media(min-width:900px){.layout{grid-template-columns:1fr 280px}}
+  .card{background:var(--card);border:1px solid var(--border);border-radius:12px;padding:10px}
   .price-table{width:100%;border-collapse:collapse;background:var(--card);border-radius:12px;overflow:hidden;box-shadow:0 1px 4px rgba(0,0,0,.05)}
   .price-table th,.price-table td{padding:12px 14px;border-bottom:1px solid var(--border);text-align:center}
   .price-table thead th{background:#f3f4f6;font-weight:600}
   .price-table tbody tr:last-child td{border-bottom:none}
   .err{margin-top:12px;color:#b91c1c;text-align:center;direction:ltr;white-space:pre-wrap}
+  .widget-title{margin:6px 8px 10px;font-size:14px;color:var(--muted);text-align:center}
   </style>
 </head>
 <body>
@@ -23,62 +27,66 @@
     <h1>أسعار الذهب بالدينار الكويتي</h1>
     <p class="meta">تحديث كل <strong>10</strong> ثوانٍ • آخر تحديث: <span id="lastUpdate">—</span></p>
 
-    <table class="price-table">
-      <thead><tr><th>العيار</th><th>السعر للغرام (د.ك)</th></tr></thead>
-      <tbody>
-        <tr><td>عيار 24</td><td id="k24">—</td></tr>
-        <tr><td>عيار 22</td><td id="k22">—</td></tr>
-        <tr><td>عيار 21</td><td id="k21">—</td></tr>
-        <tr><td>عيار 18</td><td id="k18">—</td></tr>
-      </tbody>
-    </table>
+    <section class="layout">
+      <!-- العمود الأيسر: جدول العيارات -->
+      <div class="card">
+        <table class="price-table">
+          <thead><tr><th>العيار</th><th>السعر للغرام (د.ك)</th></tr></thead>
+          <tbody>
+            <tr><td>عيار 24</td><td id="k24">—</td></tr>
+            <tr><td>عيار 22</td><td id="k22">—</td></tr>
+            <tr><td>عيار 21</td><td id="k21">—</td></tr>
+            <tr><td>عيار 18</td><td id="k18">—</td></tr>
+          </tbody>
+        </table>
+        <p id="err" class="err"></p>
+      </div>
 
-    <p id="err" class="err"></p>
+      <!-- العمود الأيمن: ويدجت TradingView داخل نفس الواجهة -->
+      <aside class="card">
+        <div class="widget-title">سعر الذهب المباشر (XAUUSD) — عرض فقط</div>
+        <div class="tradingview-widget-container">
+          <div class="tradingview-widget-container__widget"></div>
+          <script async type="text/javascript"
+            src="https://s3.tradingview.com/external-embedding/embed-widget-mini-symbol-overview.js">
+          {
+            "symbol": "OANDA:XAUUSD",
+            "locale": "ar",
+            "dateRange": "1D",
+            "colorTheme": "light",
+            "isTransparent": false,
+            "autosize": true,
+            "width": 260,
+            "height": 300
+          }
+          </script>
+        </div>
+      </aside>
+    </section>
   </main>
 
-  <!-- ويدجت صغير مثبت أسفل يمين الصفحة (عرض فقط) -->
-  <div style="position:fixed; bottom:10px; right:10px; z-index:999;">
-    <div class="tradingview-widget-container">
-      <div class="tradingview-widget-container__widget"></div>
-      <script async type="text/javascript"
-        src="https://s3.tradingview.com/external-embedding/embed-widget-mini-symbol-overview.js">
-      {
-        "symbol": "OANDA:XAUUSD",
-        "locale": "ar",
-        "dateRange": "1D",
-        "colorTheme": "light",
-        "isTransparent": false,
-        "autosize": true,
-        "width": 250,
-        "height": 150
-      }
-      </script>
-    </div>
-  </div>
-
   <script>
-    // GoldAPI: نقرأ XAU/KWD (سعر الأونصة بالدينار) ثم نحسب الغرامات — لا نعرض سطر الأونصة
+    // مصدر الحساب: GoldAPI (XAU/KWD) — لا نعرض سطر الأونصة؛ فقط عيارات الغرام
     const API_URL = "https://www.goldapi.io/api/XAU/KWD";
     const API_KEY = "goldapi-5z18ld4gkwkcydf4-io"; // مفتاحك
     const OUNCE_TO_GRAM = 31.1034768;
     const BASE_MS = 10_000; let nextMs = BASE_MS;
 
-    const $$  = (id) => document.getElementById(id);
-    const fmt = (n) => (Number.isFinite(n) ? n.toFixed(3) : "—");
+    const $$  = id => document.getElementById(id);
+    const fmt = n => (Number.isFinite(n) ? n.toFixed(3) : "—");
 
     function stamp(){
-      const d=new Date(), hh=String(d.getHours()).padStart(2,"0"),
-            mm=String(d.getMinutes()).padStart(2,"0"), ss=String(d.getSeconds()).padStart(2,"0");
+      const d=new Date();
+      const hh=String(d.getHours()).padStart(2,"0"),
+            mm=String(d.getMinutes()).padStart(2,"0"),
+            ss=String(d.getSeconds()).padStart(2,"0");
       $$("lastUpdate").textContent = `${hh}:${mm}:${ss}`;
     }
 
     async function fetchGold(){
-      // طلب مباشر مع ترويسة المفتاح
       const r = await fetch(API_URL + "?_=" + Date.now(), {
         headers: { "x-access-token": API_KEY, "Accept": "application/json" },
-        cache: "no-store",
-        mode: "cors",
-        referrerPolicy: "no-referrer"
+        cache: "no-store", mode: "cors", referrerPolicy: "no-referrer"
       });
       const text = await r.text();
       let data; try { data = JSON.parse(text); } catch { data = { raw:text }; }
@@ -96,7 +104,7 @@
     async function tick(){
       try{
         const res = await fetchGold();
-        const ounceKWD = Number(res.data?.price);  // أونصة بالدينار
+        const ounceKWD = Number(res.data?.price); // GoldAPI يرجع سعر الأونصة بالدينار
         if(!res.ok || !Number.isFinite(ounceKWD)){
           throw new Error(`HTTP ${res.status} :: ${JSON.stringify(res.data).slice(0,280)}`);
         }
@@ -105,8 +113,7 @@
         stamp(); nextMs = BASE_MS;
       }catch(e){
         $$("err").textContent = "Error: " + (e?.message || e);
-        // لو واجهت 429 (حدود)، نبطّئ لمدة أقصاها 60 ثانية
-        nextMs = Math.min(nextMs * 2, 60_000);
+        nextMs = Math.min(nextMs * 2, 60_000); // إبطاء مؤقت عند الخطأ/حدود
       }finally{
         setTimeout(tick, nextMs);
       }
