--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <p class="meta">تحديث كل <strong>10</strong> ثوانٍ • آخر تحديث: <span id="lastUpdate">—</span></p>
 
     <section class="layout">
-      <!-- العمود الأيسر: جدول العيارات -->
+      <!-- يسار: جدول العيارات -->
       <div class="card">
         <table class="price-table">
           <thead><tr><th>العيار</th><th>السعر للغرام (د.ك)</th></tr></thead>
@@ -42,7 +42,7 @@
         <p id="err" class="err"></p>
       </div>
 
-      <!-- العمود الأيمن: ويدجت TradingView داخل نفس الواجهة -->
+      <!-- يمين: ويدجت TradingView داخل نفس الواجهة (عرض فقط) -->
       <aside class="card">
         <div class="widget-title">سعر الذهب المباشر (XAUUSD) — عرض فقط</div>
         <div class="tradingview-widget-container">
@@ -66,12 +66,10 @@
   </main>
 
   <script>
-    // مصدر الحساب: GoldAPI (XAU/KWD) — لا نعرض سطر الأونصة؛ فقط عيارات الغرام
-    const API_URL = "https://www.goldapi.io/api/XAU/KWD";
-    const API_KEY = "goldapi-5z18ld4gkwkcydf4-io"; // مفتاحك
-    const OUNCE_TO_GRAM = 31.1034768;
-    const BASE_MS = 10_000; let nextMs = BASE_MS;
+    // ضع هنا رابط الـWorker الذي نشرته
+    const WORKER_JSON = "https://YOUR-SUBDOMAIN.workers.dev/"; // ← عدّل هذا
 
+    const BASE_MS = 10_000; let nextMs = BASE_MS;
     const $$  = id => document.getElementById(id);
     const fmt = n => (Number.isFinite(n) ? n.toFixed(3) : "—");
 
@@ -80,40 +78,37 @@
       const hh=String(d.getHours()).padStart(2,"0"),
             mm=String(d.getMinutes()).padStart(2,"0"),
             ss=String(d.getSeconds()).padStart(2,"0");
-      $$("lastUpdate").textContent = `${hh}:${mm}:${ss}`;
+      document.getElementById("lastUpdate").textContent = `${hh}:${mm}:${ss}`;
     }
 
-    async function fetchGold(){
-      const r = await fetch(API_URL + "?_=" + Date.now(), {
-        headers: { "x-access-token": API_KEY, "Accept": "application/json" },
-        cache: "no-store", mode: "cors", referrerPolicy: "no-referrer"
-      });
+    async function fetchRates(){
+      const url = WORKER_JSON + "?_=" + Date.now(); // كسر الكاش
+      const r = await fetch(url, { cache:"no-store", mode:"cors" });
       const text = await r.text();
       let data; try { data = JSON.parse(text); } catch { data = { raw:text }; }
       return { ok: r.ok, status: r.status, data };
     }
 
-    function fill(ounceKWD){
-      const g24 = ounceKWD / OUNCE_TO_GRAM;
-      $$("k24").textContent = fmt(g24);
-      $$("k22").textContent = fmt(g24*(22/24));
-      $$("k21").textContent = fmt(g24*(21/24));
-      $$("k18").textContent = fmt(g24*(18/24));
+    function fill({k24, k22, k21, k18}){
+      $$("k24").textContent = fmt(k24);
+      $$("k22").textContent = fmt(k22);
+      $$("k21").textContent = fmt(k21);
+      $$("k18").textContent = fmt(k18);
     }
 
     async function tick(){
       try{
-        const res = await fetchGold();
-        const ounceKWD = Number(res.data?.price); // GoldAPI يرجع سعر الأونصة بالدينار
-        if(!res.ok || !Number.isFinite(ounceKWD)){
+        const res = await fetchRates();
+        const rates = res.data?.rates;
+        if(!res.ok || !rates || ![rates.k24, rates.k22, rates.k21, rates.k18].every(Number.isFinite)){
           throw new Error(`HTTP ${res.status} :: ${JSON.stringify(res.data).slice(0,280)}`);
         }
-        fill(ounceKWD);
-        $$("err").textContent = "";
+        fill(rates);
+        document.getElementById("err").textContent = "";
         stamp(); nextMs = BASE_MS;
       }catch(e){
-        $$("err").textContent = "Error: " + (e?.message || e);
-        nextMs = Math.min(nextMs * 2, 60_000); // إبطاء مؤقت عند الخطأ/حدود
+        document.getElementById("err").textContent = "Error: " + (e?.message || e);
+        nextMs = Math.min(nextMs * 2, 60_000); // backoff إلى 60 ثانية
       }finally{
         setTimeout(tick, nextMs);
       }
